--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,32 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Ignore build artifacts
+/build/
 *.o
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
+*.exe
+*.dll
 *.so
 *.dylib
-*.dll
 
-# Fortran module files
-*.mod
-*.smod
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Ignore IDE-specific files
+.vscode/
+.idea/
+*.sublime-workspace
 
-# Executables
-*.exe
-*.out
-*.app
+# Ignore logs and temp files
+*.log
+*.tmp
+
+# Ignore CMake generated files
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+compile_commands.json
+
+# Ignore Neovim swap files
+*.swp
+
