--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
-project(BouncingBalls)
+project(bouncing_balls)
 
-# Set C++17
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -11,33 +11,35 @@ find_package(OpenCL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 3.3 REQUIRED)
 
-# Add all source files
-set(SOURCES
+# Add executable
+add_executable(bouncing_balls
     src/main.cpp
     src/GPUManager.cpp
     src/Renderer.cpp
     src/Simulation.cpp
 )
 
-# Create executable
-add_executable(bouncing_balls ${SOURCES})
-
 # Include directories
-target_include_directories(bouncing_balls PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
+target_include_directories(bouncing_balls
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${OpenCL_INCLUDE_DIRS}
+        ${GLEW_INCLUDE_DIRS}
 )
 
 # Link libraries
-target_link_libraries(bouncing_balls PRIVATE
-    OpenGL::GL
-    OpenCL::OpenCL
-    GLEW::GLEW
-    glfw
+target_link_libraries(bouncing_balls
+    PRIVATE
+        OpenGL::GL
+        OpenCL::OpenCL
+        GLEW::GLEW
+        glfw
 )
 
 # Copy OpenCL kernel to build directory
-configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/kernels/simulation.cl
-    ${CMAKE_CURRENT_BINARY_DIR}/simulation.cl
-    COPYONLY
+add_custom_command(
+    TARGET bouncing_balls POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/src/kernels/simulation.cl
+            ${CMAKE_CURRENT_BINARY_DIR}/simulation.cl
 )
