--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,13 @@ add_custom_command(
             ${CMAKE_SOURCE_DIR}/src/kernels/simulation.cl
             ${CMAKE_CURRENT_BINARY_DIR}/simulation.cl
 )
+
+# Handle CMake policies to suppress warnings
+if(POLICY CMP0072)
+    cmake_policy(SET CMP0072 NEW)
+endif()
+
+if(POLICY CMP0074)
+    cmake_policy(SET CMP0074 NEW)
+endif()
+
